Fix side nav bar alignment

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -209,7 +209,6 @@ li a {
   height: 18px !important;
   display: inline;
   margin-top: 4px;
-  margin-left: 120px;
 }
 
 .info-icon:hover {
@@ -474,8 +473,6 @@ h5, h6 {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 5px;
-  margin-left: 30px;
 }
 
 .notification-badge-color {
@@ -483,11 +480,8 @@ h5, h6 {
   color: white;
 }
 
-.icon-button-angel-personal-team {
-  margin-left: 80px;
-}
-
 .team-row-container {
   display: flex;
-  align-items: center;
+  justify-content: space-between;
+  align-items: flex-start;
 }
